doc: structure de base accueil

--- a/index.html
+++ b/index.html
@@ -4,6 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oh My Food</title>
+    <link rel="stylesheet" href="assets\CSS\style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="assets\logo\ohmyfood.png" alt="logo_ohmyfood" />
+      <div class="header_infoMenu">
+        <div class="header_menuLocation">Paris,Belleville</div>
+      </div>
+    </header>
+    <main>
+      <section id="section_info">
+        <div class="section_textReservation">
+          <div>Réservez le menu qui vous convient</div>
+          <div>
+            Découvrez des restaurants d'exception, sélectionnés par nos soins
+          </div>
+          <button>Explorez nos restaurants</button>
+        </div>
+      </section>
+      <section id="fonctionnement">
+        <h1>fonctionnement</h1>
+        <div class="fonctionnement_BarreBoutons">
+          <div class="fonctionnement_bouton">Choisissez un restaurant</div>
+          <div class="fonctionnement_bouton">Composez votre menu</div>
+          <div class="fonctionnement_bouton">Dégustez au restaurant</div>
+        </div>
+      </section>
+      <section id="restaurants">
+        <h1>restaurants</h1>
+        <div class="restaurants_cards">
+          <div class="restaurant_card"></div>
+          <div class="restaurant_card"></div>
+          <div class="restaurant_card"></div>
+          <div class="restaurant_card"></div>
+        </div>
+      </section>
+    </main>
+    <footer id="footer">
+      <div class="footer_logo">ohmyfood</div>
+      <div class="footer_links">
+        <div class="footer_link">Proposer un restaurant</div>
+        <div class="footer_link">Devenir partenaire</div>
+        <div class="footer_link">Mantions légales</div>
+        <div class="footer_link">Contact</div>
+      </div>
+    </footer>
+  </body>
 </html>
