--- a/index.html
+++ b/index.html
@@ -5,50 +5,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oh My Food</title>
     <link rel="stylesheet" href="assets\CSS\style.css" />
+    <script
+      src="https://kit.fontawesome.com/8c24e7947e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,900;1,700&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <img src="assets\logo\ohmyfood.png" alt="logo_ohmyfood" />
-      <div class="header_infoMenu">
-        <div class="header_menuLocation">Paris,Belleville</div>
+    <header class="center column">
+      <img
+        src="assets\logo\ohmyfood.png"
+        alt="logo_ohmyfood "
+        class="logo_ohmyfood"
+      />
+      <div class="header_infoMenu center">
+        <i class="fa-solid fa-location-dot"></i>
+        <p class="header_menuLocation">Paris,Belleville</p>
       </div>
     </header>
     <main>
-      <section id="section_info">
-        <div class="section_textReservation">
-          <div>Réservez le menu qui vous convient</div>
-          <div>
+      <section id="section_info" class="padding_section backGris">
+        <div class="section_textReservation center column">
+          <h1>Réservez le menu qui vous convient</h1>
+          <p>
             Découvrez des restaurants d'exception, sélectionnés par nos soins
+          </p>
+          <button class="info_button bold colorWhite backRose noBorder">
+            Explorez nos restaurants
+          </button>
+        </div>
+      </section>
+      <section id="fonctionnement" class="padding_section">
+        <h1 class="title">Fonctionnement</h1>
+        <div class="fonctionnement_BarreBoutons center column">
+          <div
+            class="fonctionnement_bouton backGris center bold evenly"
+            data-numero="1"
+          >
+            <i
+              class="fa-solid fa-mobile-screen-button fonctionnement_iconeButton"
+            ></i>
+            <p>Choisissez un restaurant</p>
           </div>
-          <button>Explorez nos restaurants</button>
+          <div
+            class="fonctionnement_bouton backGris center bold evenly"
+            data-numero="2"
+          >
+            <i class="fa-solid fa-list fonctionnement_iconeButton"></i>
+            <p>Composez votre menu</p>
+          </div>
+          <div
+            class="fonctionnement_bouton backGris center bold evenly"
+            data-numero="3"
+          >
+            <i class="fa-solid fa-store fonctionnement_iconeButton"></i>
+            <p>Dégustez au restaurant</p>
+          </div>
         </div>
       </section>
-      <section id="fonctionnement">
-        <h1>fonctionnement</h1>
-        <div class="fonctionnement_BarreBoutons">
-          <div class="fonctionnement_bouton">Choisissez un restaurant</div>
-          <div class="fonctionnement_bouton">Composez votre menu</div>
-          <div class="fonctionnement_bouton">Dégustez au restaurant</div>
-        </div>
-      </section>
-      <section id="restaurants">
-        <h1>restaurants</h1>
-        <div class="restaurants_cards">
-          <div class="restaurant_card"></div>
-          <div class="restaurant_card"></div>
-          <div class="restaurant_card"></div>
-          <div class="restaurant_card"></div>
+      <section id="restaurants" class="column backGris padding_section">
+        <h1 class="title">Restaurants</h1>
+        <div class="restaurants_cards column">
+          <div class="restaurant_card">
+            <img
+              src="assets/restaurants/jay-wennington.jpg"
+              alt="photo_plat_restaurant_1"
+              class="restaurant_card--photo"
+            />
+            <div class="container_textCard row between backWhite">
+              <div class="textCard column">
+                <h3>La palette du goût</h3>
+                <p>Ménilmontant</p>
+              </div>
+              <i class="fa-regular fa-heart center icone_coeur"></i>
+            </div>
+          </div>
+          <div class="restaurant_card">
+            <img
+              src="assets/restaurants/stil.jpg"
+              alt="photo_plat_restaurant_2"
+              class="restaurant_card--photo"
+            />
+            <div class="container_textCard row between backWhite">
+              <div class="textCard column">
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
+              </div>
+              <i class="fa-regular fa-heart center icone_coeur"></i>
+            </div>
+          </div>
+          <div class="restaurant_card">
+            <img
+              src="assets/restaurants/toa-heftiba.jpg"
+              alt="photo_plat_restaurant_3"
+              class="restaurant_card--photo"
+            />
+            <div class="container_textCard row between backWhite">
+              <div class="textCard column">
+                <h3>A la française</h3>
+                <p>Cité Rouge</p>
+              </div>
+              <i class="fa-regular fa-heart center"></i>
+            </div>
+          </div>
+          <div class="restaurant_card">
+            <img
+              src="assets/restaurants/louis-hansel.jpg"
+              alt="photo_plat_restaurant_4"
+              class="restaurant_card--photo"
+            />
+            <div class="container_textCard row between backWhite">
+              <div class="textCard column">
+                <h3>Le délice des sens</h3>
+                <p>Folie-Méricourt</p>
+              </div>
+              <i class="fa-regular fa-heart center"></i>
+            </div>
+          </div>
         </div>
       </section>
     </main>
-    <footer id="footer">
-      <div class="footer_logo">ohmyfood</div>
-      <div class="footer_links">
-        <div class="footer_link">Proposer un restaurant</div>
-        <div class="footer_link">Devenir partenaire</div>
-        <div class="footer_link">Mantions légales</div>
-        <div class="footer_link">Contact</div>
-      </div>
+    <footer id="footer" class="backNoir">
+      <p class="footer_logo font_Logo--title colorWhite">ohmyfood</p>
+      <ul class="footer_links colorWhite">
+        <li class="footer_link">
+          <i class="fa-solid fa-utensils"></i> Proposer un restaurant
+        </li>
+        <li class="footer_link">
+          <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire
+        </li>
+        <li class="footer_link">Mantions légales</li>
+        <li class="footer_link">Contact</li>
+      </ul>
     </footer>
   </body>
 </html>
