docs : add 4 menus

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p>
             Découvrez des restaurants d'exception, sélectionnés par nos soins
           </p>
-          <button class="info_button bold colorWhite backRose noBorder">
+          <button class="button_rose bold colorWhite backRose noBorder">
             Explorez nos restaurants
           </button>
         </div>
@@ -71,62 +71,72 @@
       <section id="restaurants" class="column backGris padding_section">
         <h1 class="title">Restaurants</h1>
         <div class="restaurants_cards column">
-          <div class="restaurant_card">
-            <img
-              src="assets/restaurants/jay-wennington.jpg"
-              alt="photo_plat_restaurant_1"
-              class="restaurant_card--photo"
-            />
-            <div class="container_textCard row between backWhite">
-              <div class="textCard column">
-                <h3>La palette du goût</h3>
-                <p>Ménilmontant</p>
+          <a href="restaurants/menu1.html" class="link_pages">
+            <div class="restaurant_card">
+              <img
+                src="assets/restaurants/jay-wennington.jpg"
+                alt="photo_plat_restaurant_1"
+                class="restaurant_card--photo"
+              />
+              <div class="container_textCard row between backWhite">
+                <div class="textCard column">
+                  <h3>La palette du goût</h3>
+                  <p>Ménilmontant</p>
+                </div>
+                <i class="fa-regular fa-heart center icone_coeur"></i>
               </div>
-              <i class="fa-regular fa-heart center icone_coeur"></i>
             </div>
-          </div>
-          <div class="restaurant_card">
-            <img
-              src="assets/restaurants/stil.jpg"
-              alt="photo_plat_restaurant_2"
-              class="restaurant_card--photo"
-            />
-            <div class="container_textCard row between backWhite">
-              <div class="textCard column">
-                <h3>La note enchantée</h3>
-                <p>Charonne</p>
+          </a>
+
+          <a href="restaurants/menu2.html" class="link_pages">
+            <div class="restaurant_card">
+              <img
+                src="assets/restaurants/louis-hansel.jpg"
+                alt="photo_plat_restaurant_2"
+                class="restaurant_card--photo"
+              />
+              <div class="container_textCard row between backWhite">
+                <div class="textCard column">
+                  <h3>Le délice des sens</h3>
+                  <p>Folie-Méricourt</p>
+                </div>
+                <i class="fa-regular fa-heart center"></i>
               </div>
-              <i class="fa-regular fa-heart center icone_coeur"></i>
             </div>
-          </div>
-          <div class="restaurant_card">
-            <img
-              src="assets/restaurants/toa-heftiba.jpg"
-              alt="photo_plat_restaurant_3"
-              class="restaurant_card--photo"
-            />
-            <div class="container_textCard row between backWhite">
-              <div class="textCard column">
-                <h3>A la française</h3>
-                <p>Cité Rouge</p>
+          </a>
+
+          <a href="restaurants/menu3.html" class="link_pages">
+            <div class="restaurant_card">
+              <img
+                src="assets/restaurants/stil.jpg"
+                alt="photo_plat_restaurant_3"
+                class="restaurant_card--photo"
+              />
+              <div class="container_textCard row between backWhite">
+                <div class="textCard column">
+                  <h3>La note enchantée</h3>
+                  <p>Charonne</p>
+                </div>
+                <i class="fa-regular fa-heart center icone_coeur"></i>
               </div>
-              <i class="fa-regular fa-heart center"></i>
             </div>
-          </div>
-          <div class="restaurant_card">
-            <img
-              src="assets/restaurants/louis-hansel.jpg"
-              alt="photo_plat_restaurant_4"
-              class="restaurant_card--photo"
-            />
-            <div class="container_textCard row between backWhite">
-              <div class="textCard column">
-                <h3>Le délice des sens</h3>
-                <p>Folie-Méricourt</p>
+          </a>
+          <a href="restaurants/menu4.html" class="link_pages">
+            <div class="restaurant_card">
+              <img
+                src="assets/restaurants/toa-heftiba.jpg"
+                alt="photo_plat_restaurant_4"
+                class="restaurant_card--photo"
+              />
+              <div class="container_textCard row between backWhite">
+                <div class="textCard column">
+                  <h3>À la française</h3>
+                  <p>Cité Rouge</p>
+                </div>
+                <i class="fa-regular fa-heart center"></i>
               </div>
-              <i class="fa-regular fa-heart center"></i>
             </div>
-          </div>
+          </a>
         </div>
       </section>
     </main>
