docs : add fontsize + change class footer

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,900;1,700&family=Shrikhand&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,900;1,700&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -140,9 +142,9 @@
         </div>
       </section>
     </main>
-    <footer id="footer" class="backNoir">
+    <footer id="footer" class="backNoir column">
       <p class="footer_logo font_Logo--title colorWhite">ohmyfood</p>
-      <ul class="footer_links colorWhite">
+      <ul class="footer_links column colorWhite">
         <li class="footer_link">
           <i class="fa-solid fa-utensils"></i> Proposer un restaurant
         </li>
