--- a/restaurants/menu3.html
+++ b/restaurants/menu3.html
@@ -18,15 +18,19 @@
   </head>
   <body>
     <header>
-      <div class="header_menu around row">
-        <a href="../index.html" class="link_pages">
-          <i class="fa-solid fa-arrow-left header_leftArrow"></i>
-        </a>
-        <img
-          src="../assets/logo/ohmyfood.png"
-          alt="logo_ohmyfood "
-          class="logo_ohmyfood"
-        />
+      <div class="row header_container">
+        <div class="arrow_left_header">
+          <a href="../index.html" class="link_pages">
+            <i class="fa-solid fa-arrow-left"></i>
+          </a>
+        </div>
+        <div class="img_header_menu">
+          <img
+            src="../assets/logo/ohmyfood.png"
+            alt="logo_ohmyfood "
+            class="logo_ohmyfood"
+          />
+        </div>
       </div>
     </header>
     <img
@@ -37,87 +41,87 @@
     <main>
       <section id="menu" class="backGris center column">
         <div class="title_menu row between">
-          <h1 class="font_Logo--title">La note enchantée</h1>
-          <i class="fa-regular fa-heart"></i>
+          <h1 class="font_Logo--title font_size--title">La note enchantée</h1>
+          <i class="fa-regular fa-heart fa-2xl"></i>
         </div>
         <div class="details_menu">
-          <h2>Entrées</h2>
-          <div class="menu_card--container row between backWhite">
-            <div class="container_text">
-              <h3>Ravioles de foie gras</h3>
+          <h2 class="light"><span class="title_underline">ENTR</span>EES</h2>
+          <div class="menu_card--container column backWhite">
+            <h3>Ravioles de foie gras</h3>
+            <div class="container_text row between">
               <p>Accompagnées de leur crème à la truffe</p>
+              <p>25€</p>
             </div>
-            <p>25€</p>
           </div>
-          <div class="menu_card--container row between backWhite">
-            <div class="container_text">
-              <h3>Caviar osciètre</h3>
+          <div class="menu_card--container column backWhite">
+            <h3>Caviar osciètre</h3>
+            <div class="container_text row between">
               <p>Sur blini à la farine de blé noir</p>
+              <p>35€</p>
             </div>
-            <p>35€</p>
           </div>
-          <div class="menu_card--container row between backWhite">
-            <div class="container_text">
-              <h3>Homard et espuma de potiron</h3>
+          <div class="menu_card--container column backWhite">
+            <h3>Homard et espuma de potiron</h3>
+            <div class="container_text row between">
               <p>Marinés aux zestes d'orange</p>
+              <p>20€</p>
             </div>
-            <p>20€</p>
           </div>
-          <div class="menu_card--container row between backWhite">
-            <div class="container_text">
-              <h3>Foie gras de canard cuit entier</h3>
+          <div class="menu_card--container column backWhite">
+            <h3>Foie gras de canard cuit entier</h3>
+            <div class="container_text row between">
               <p>Confiture de figue et pain toasté</p>
+              <p>35€</p>
             </div>
-            <p>35€</p>
           </div>
         </div>
         <div class="details_menu">
-          <h2>Plats</h2>
+          <h2 class="light"><span class="title_underline">PLAT</span>S</h2>
 
-          <div class="menu_card--container row between backWhite">
-            <div class="container_text">
-              <h3>Noix de coquilles Saint-Jacques</h3>
+          <div class="menu_card--container column backWhite">
+            <h3>Noix de coquilles Saint-Jacques</h3>
+            <div class="container_text row between">
               <p>Sur lit de purée de céleri-rave</p>
+              <p>40€</p>
             </div>
-            <p>40€</p>
           </div>
-          <div class="menu_card--container row between backWhite">
-            <div class="container_text">
-              <h3>Langoustine poêlée</h3>
+          <div class="menu_card--container column backWhite">
+            <h3>Langoustine poêlée</h3>
+            <div class="container_text row between">
               <p>Purée de patate douce</p>
+              <p>35€</p>
             </div>
-            <p>35€</p>
           </div>
-          <div class="menu_card--container row between backWhite">
-            <div class="container_text">
-              <h3>Mijoté de queue de bœuf</h3>
+          <div class="menu_card--container column backWhite">
+            <h3>Mijoté de queue de bœuf</h3>
+            <div class="container_text row between">
               <p>Et riz sauvage aux zestes de citron</p>
+              <p>44€</p>
             </div>
-            <p>44€</p>
           </div>
         </div>
         <div class="details_menu">
-          <h2>Desserts</h2>
-          <div class="menu_card--container row between backWhite">
-            <div class="container_text">
-              <h3>Macaron noisette et chocolat</h3>
+          <h2 class="light"><span class="title_underline">DESS</span>ERTS</h2>
+          <div class="menu_card--container column backWhite">
+            <h3>Macaron noisette et chocolat</h3>
+            <div class="container_text row between">
               <p>Glace au caramel brun et sel de Guérande</p>
+              <p>18€</p>
             </div>
-            <p>18€</p>
           </div>
-          <div class="menu_card--container row between backWhite">
-            <div class="container_text">
-              <h3>Baba au rhum revisité</h3>
+          <div class="menu_card--container column backWhite">
+            <h3>Baba au rhum revisité</h3>
+            <div class="container_text row between">
               <p>Avec son coulis de citron</p>
+              <p>22€</p>
             </div>
-            <p>22€</p>
           </div>
-          <div class="menu_card--container row between backWhite">
-            <div class="container_text">
-              <h3>Tarte au citron meringuée</h3>
+          <div class="menu_card--container column backWhite">
+            <h3>Tarte au citron meringuée</h3>
+            <div class="container_text row between">
               <p>Déstructurée</p>
+              <p>23€</p>
             </div>
-            <p>23€</p>
           </div>
         </div>
         <button
@@ -127,11 +131,12 @@
         </button>
       </section>
     </main>
-    <footer id="footer" class="backNoir">
+    <footer id="footer" class="backNoir column">
       <p class="footer_logo font_Logo--title colorWhite">ohmyfood</p>
-      <ul class="footer_links colorWhite">
+      <ul class="footer_links colorWhite column">
         <li class="footer_link">
-          <i class="fa-solid fa-utensils"></i> Proposer un restaurant
+          <i class="fa-solid fa-utensils icone_footer"></i> Proposer un
+          restaurant
         </li>
         <li class="footer_link">
           <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire
