--- a/restaurants/menu2.html
+++ b/restaurants/menu2.html
@@ -42,78 +42,128 @@
       <section id="menu" class="backGris center column">
         <div class="title_menu row between">
           <h1 class="font_Logo--title font_size--title">Le délice des sens</h1>
-          <i class="fa-regular fa-heart fa-2xl"></i>
+          <input type="checkbox" id="coeur-checkbox5" class="hidden-checkbox" />
+          <label for="coeur-checkbox5" class="icone_coeur-label">
+            <i class="fa-solid fa-heart fa-xl center icone_coeurPlein"></i>
+            <i class="fa-regular fa-heart fa-xl center icone_coeur"></i>
+          </label>
         </div>
-        <div class="details_menu">
+        <div class="details_menu delay_1">
           <h2 class="light"><span class="title_underline">ENTR</span>EES</h2>
           <div class="menu_card--container column backWhite">
-            <h3>Tartare de thon</h3>
+            <h3 class="title_padding">Tartare de thon</h3>
+
             <div class="container_text row between">
               <p>Assaisonné au yuzu</p>
-              <p>25€</p>
+              <div class="price-container">
+                <p class="price bold">25€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Bouchée de homard croustillant</h3>
+            <h3 class="title_padding">Bouchée de homard croustillant</h3>
             <div class="container_text row between">
               <p>Et sa farandole de petits légumes</p>
-              <p>35€</p>
+              <div class="price-container">
+                <p class="price bold">35€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Velouté de cèpes</h3>
+            <h3 class="title_padding">Velouté de cèpes</h3>
             <div class="container_text row between">
-              <p>Aux truffes</p>
-              <p>20€</p>
+              <p>Aux truffesr</p>
+              <div class="price-container">
+                <p class="price bold">20€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
         </div>
-        <div class="details_menu">
+        <div class="details_menu delay_2">
           <h2 class="light"><span class="title_underline">PLAT</span>S</h2>
 
           <div class="menu_card--container column backWhite">
-            <h3>Poulet rôti aux herbes de Provence</h3>
+            <h3 class="title_padding">Poulet rôti aux herbes de Provence</h3>
             <div class="container_text row between">
-              <p>Et sa crème de truffe</p>
-              <p>40€</p>
+              <p>Et sa crème de truffes</p>
+              <div class="price-container">
+                <p class="price bold">40€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Langouste rôtie</h3>
+            <h3 class="title_padding">Langouste rôtie</h3>
             <div class="container_text row between">
               <p>Et ses légumes de saison</p>
-              <p>35€</p>
+              <div class="price-container">
+                <p class="price bold">35€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Côte de bœuf Angus</h3>
+            <h3 class="title_padding">Côte de bœuf Angus</h3>
             <div class="container_text row between">
               <p>Et sa purée de panais</p>
-              <p>44€</p>
+              <div class="price-container">
+                <p class="price bold">44€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
         </div>
-        <div class="details_menu">
+        <div class="details_menu delay_3">
           <h2 class="light"><span class="title_underline">DESS</span>ERTS</h2>
           <div class="menu_card--container column backWhite">
-            <h3>Farandole de desserts</h3>
+            <h3 class="title_padding">Farandole de desserts</h3>
             <div class="container_text row between">
               <p>Du chef</p>
-              <p>18€</p>
+              <div class="price-container">
+                <p class="price bold">18€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Crème brulée</h3>
+            <h3 class="title_padding">Crème brulée</h3>
             <div class="container_text row between">
               <p>Revisitée</p>
-              <p>22€</p>
+              <div class="price-container">
+                <p class="price bold">22€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Tiramisu</h3>
+            <h3 class="title_padding">Tiramisu</h3>
             <div class="container_text row between">
               <p>À la noisette</p>
-              <p>23€</p>
+              <div class="price-container">
+                <p class="price bold">23€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
         </div>
@@ -134,8 +184,8 @@
         <li class="footer_link">
           <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire
         </li>
-        <li class="footer_link">Mantions légales</li>
-        <li class="footer_link">Contact</li>
+        <li class="footer_link">Mentions légales</li>
+        <a href="safa.sellam@outlook.fr" class="contacts">Contact</a>
       </ul>
     </footer>
   </body>
