--- a/restaurants/menu4.html
+++ b/restaurants/menu4.html
@@ -42,78 +42,128 @@
       <section id="menu" class="backGris center column">
         <div class="title_menu row between">
           <h1 class="font_Logo--title font_size--title">À la française</h1>
-          <i class="fa-regular fa-heart fa-2xl"></i>
+          <input type="checkbox" id="coeur-checkbox5" class="hidden-checkbox" />
+          <label for="coeur-checkbox5" class="icone_coeur-label">
+            <i class="fa-solid fa-heart fa-xl center icone_coeurPlein"></i>
+            <i class="fa-regular fa-heart fa-xl center icone_coeur"></i>
+          </label>
         </div>
-        <div class="details_menu">
+        <div class="details_menu delay_1">
           <h2 class="light"><span class="title_underline">ENTR</span>EES</h2>
           <div class="menu_card--container column backWhite">
-            <h3>Tartare de poulpe acidulé</h3>
+            <h3 class="title_padding">Tartare de poulpe acidulé</h3>
+
             <div class="container_text row between">
               <p>Aux zestes d'orange</p>
-              <p>25€</p>
+              <div class="price-container">
+                <p class="price bold">25€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Velouté de légumes d'antan</h3>
+            <h3 class="title_padding">Velouté de légumes d'antan</h3>
             <div class="container_text row between">
               <p>Carotte, panais, topinambour</p>
-              <p>35€</p>
+              <div class="price-container">
+                <p class="price bold">35€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Soupe à l'oignon</h3>
+            <h3 class="title_padding">Soupe à l'oignon</h3>
             <div class="container_text row between">
               <p>Revisitée</p>
-              <p>20€</p>
+              <div class="price-container">
+                <p class="price bold">20€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
         </div>
-        <div class="details_menu">
+        <div class="details_menu delay_2">
           <h2 class="light"><span class="title_underline">PLAT</span>S</h2>
 
           <div class="menu_card--container column backWhite">
-            <h3>Coquilles Saint-Jacques</h3>
+            <h3 class="title_padding">Coquilles Saint-Jacques</h3>
             <div class="container_text row between">
               <p>Accompagnées d'une purée de panais</p>
-              <p>40€</p>
+              <div class="price-container">
+                <p class="price bold">40€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Magret de canard</h3>
+            <h3 class="title_padding">Magret de canard</h3>
             <div class="container_text row between">
               <p>Et parmentier de pommes de terre</p>
-              <p>35€</p>
+              <div class="price-container">
+                <p class="price bold">35€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+            <h3 class="title_padding">Pigeonneau d’Ille-et-Vilaine</h3>
             <div class="container_text row between">
               <p>Sur son lit de gnocchis aux légumes</p>
-              <p>44€</p>
+              <div class="price-container">
+                <p class="price bold">44€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
         </div>
-        <div class="details_menu">
+        <div class="details_menu delay_3">
           <h2 class="light"><span class="title_underline">DESS</span>ERTS</h2>
           <div class="menu_card--container column backWhite">
-            <h3>Pétales de violettes glacés</h3>
+            <h3 class="title_padding">Pétales de violettes glacés</h3>
             <div class="container_text row between">
               <p>Et purée de noisettes</p>
-              <p>18€</p>
+              <div class="price-container">
+                <p class="price bold">18€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Fondant au chocolat</h3>
+            <h3 class="title_padding">Fondant au chocolat</h3>
             <div class="container_text row between">
               <p>Revisité</p>
-              <p>22€</p>
+              <div class="price-container">
+                <p class="price bold">22€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Millefeuille croustillant</h3>
+            <h3 class="title_padding">Millefeuille croustillant</h3>
             <div class="container_text row between">
-              <p>Myrtilles et pâte d’amande</p>
-              <p>23€</p>
+              <p>Myrtilles et pâte d’amandenoire</p>
+              <div class="price-container">
+                <p class="price bold">23€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
         </div>
@@ -134,8 +184,8 @@
         <li class="footer_link">
           <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire
         </li>
-        <li class="footer_link">Mantions légales</li>
-        <li class="footer_link">Contact</li>
+        <li class="footer_link">Mentions légales</li>
+        <a href="safa.sellam@outlook.fr" class="contacts">Contact</a>
       </ul>
     </footer>
   </body>
