--- a/restaurants/menu3.html
+++ b/restaurants/menu3.html
@@ -42,85 +42,140 @@
       <section id="menu" class="backGris center column">
         <div class="title_menu row between">
           <h1 class="font_Logo--title font_size--title">La note enchantée</h1>
-          <i class="fa-regular fa-heart fa-2xl"></i>
+          <input type="checkbox" id="coeur-checkbox5" class="hidden-checkbox" />
+          <label for="coeur-checkbox5" class="icone_coeur-label">
+            <i class="fa-solid fa-heart fa-xl center icone_coeurPlein"></i>
+            <i class="fa-regular fa-heart fa-xl center icone_coeur"></i>
+          </label>
         </div>
-        <div class="details_menu">
+        <div class="details_menu delay_1">
           <h2 class="light"><span class="title_underline">ENTR</span>EES</h2>
           <div class="menu_card--container column backWhite">
-            <h3>Ravioles de foie gras</h3>
+            <h3 class="title_padding">Ravioles de foie gras</h3>
+
             <div class="container_text row between">
               <p>Accompagnées de leur crème à la truffe</p>
-              <p>25€</p>
+              <div class="price-container">
+                <p class="price bold">25€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Caviar osciètre</h3>
+            <h3 class="title_padding">Caviar osciètre</h3>
             <div class="container_text row between">
               <p>Sur blini à la farine de blé noir</p>
-              <p>35€</p>
+              <div class="price-container">
+                <p class="price bold">35€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Homard et espuma de potiron</h3>
+            <h3 class="title_padding">Homard et espuma de potiron</h3>
             <div class="container_text row between">
               <p>Marinés aux zestes d'orange</p>
-              <p>20€</p>
+              <div class="price-container">
+                <p class="price bold">20€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Foie gras de canard cuit entier</h3>
+            <h3 class="title_padding">Foie gras de canard cuit entier</h3>
             <div class="container_text row between">
-              <p>Confiture de figue et pain toasté</p>
-              <p>35€</p>
+              <p>Confiture de figue et pain toastée</p>
+              <div class="price-container">
+                <p class="price bold">35€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
         </div>
-        <div class="details_menu">
+        <div class="details_menu delay_2">
           <h2 class="light"><span class="title_underline">PLAT</span>S</h2>
 
           <div class="menu_card--container column backWhite">
-            <h3>Noix de coquilles Saint-Jacques</h3>
+            <h3 class="title_padding">Noix de coquilles Saint-Jacques</h3>
             <div class="container_text row between">
               <p>Sur lit de purée de céleri-rave</p>
-              <p>40€</p>
+              <div class="price-container">
+                <p class="price bold">40€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Langoustine poêlée</h3>
+            <h3 class="title_padding">Langoustine poêlée</h3>
             <div class="container_text row between">
               <p>Purée de patate douce</p>
-              <p>35€</p>
+              <div class="price-container">
+                <p class="price bold">35€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Mijoté de queue de bœuf</h3>
+            <h3 class="title_padding">Mijoté de queue de bœuf</h3>
             <div class="container_text row between">
               <p>Et riz sauvage aux zestes de citron</p>
-              <p>44€</p>
+              <div class="price-container">
+                <p class="price bold">44€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
         </div>
-        <div class="details_menu">
+        <div class="details_menu delay_3">
           <h2 class="light"><span class="title_underline">DESS</span>ERTS</h2>
           <div class="menu_card--container column backWhite">
-            <h3>Macaron noisette et chocolat</h3>
+            <h3 class="title_padding">Macaron noisette et chocolat</h3>
             <div class="container_text row between">
               <p>Glace au caramel brun et sel de Guérande</p>
-              <p>18€</p>
+              <div class="price-container">
+                <p class="price bold">18€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Baba au rhum revisité</h3>
+            <h3 class="title_padding">Baba au rhum revisité</h3>
             <div class="container_text row between">
               <p>Avec son coulis de citron</p>
-              <p>22€</p>
+              <div class="price-container">
+                <p class="price bold">22€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
           <div class="menu_card--container column backWhite">
-            <h3>Tarte au citron meringuée</h3>
+            <h3 class="title_padding">Tarte au citron meringuée</h3>
             <div class="container_text row between">
               <p>Déstructurée</p>
-              <p>23€</p>
+              <div class="price-container">
+                <p class="price bold">23€</p>
+              </div>
+            </div>
+            <div class="slide_in">
+              <i class="fa-regular fa-circle-check"></i>
             </div>
           </div>
         </div>
@@ -141,8 +196,8 @@
         <li class="footer_link">
           <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire
         </li>
-        <li class="footer_link">Mantions légales</li>
-        <li class="footer_link">Contact</li>
+        <li class="footer_link">Mentions légales</li>
+        <a href="safa.sellam@outlook.fr" class="contacts">Contact</a>
       </ul>
     </footer>
   </body>
